[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arrow-to-knee"
dynamic = ["version"]
description = 'I used to be an adventurer like you...'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy<2;python_version<\"3.12\""
]
[project.optional-dependencies]
cli = ["rich"]

[project.urls]
Documentation = "https://github.com/Angus Hollands/arrow-to-knee#readme"
Issues = "https://github.com/Angus Hollands/arrow-to-knee/issues"
Source = "https://github.com/Angus Hollands/arrow-to-knee"

[project.scripts]
remove-arrow = "arrow_to_knee.cli:remove_arrow"

[tool.hatch.version]
path = "src/arrow_to_knee/__about__.py"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/arrow_to_knee tests}"

[tool.coverage.run]
source_pkgs = ["arrow_to_knee", "tests"]
branch = true
parallel = true
omit = [
  "src/arrow_to_knee/__about__.py",
]

[tool.coverage.paths]
arrow_to_knee = ["src/arrow_to_knee", "*/arrow-to-knee/src/arrow_to_knee"]
tests = ["tests", "*/arrow-to-knee/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
